# facet-diff

./: CHANGELOG.md  Cargo.toml  README.md  README.md.in
examples/: diff_basic.rs  enums.rs  structure_diffs.rs  vecs.rs
src/: diff.rs  display.rs  lib.rs  sequences.rs
